--- a/cameras.yaml
+++ b/cameras.yaml
@@ -28,4 +28,12 @@
   platform: generic
   still_image_url: https://www.yr.no/place/Portugal/Lisboa/Odivelas//meteogram.png
   
+
+- platform: mjpeg
+  name: Impressora 3d
+  mjpeg_url: http://192.168.1.239:81/video.cgi?user=admin&pwd=
+  
+  
+  
+  
   
