--- a/packages/zona_de_testes.yaml
+++ b/packages/zona_de_testes.yaml
@@ -1,5 +1,14 @@
 homeassistant:
 
+      
+
+
+
+
+        
+shell_command:
+  teste: curl -k "http://192.168.1.101:8080/22/on"
+
 
 automation:   
 
@@ -44,13 +53,13 @@ script:
   
   push:
     sequence:       
-      service: notify.pushnotification_unnamed_device_9
+      service: notify.pushnotification_meu_telemovel
       data:
-        title: 'GATE'
-        message: 'Closed'
+        title: 'Impressora 3d'
+        message: 'A impressão chegou aos 50%'
         data:
-          tag: alert
-          image: http://weknowyourdreams.com/images/cobra/cobra-13.jpg
+         # tag: alert
+          url: http://192.168.1.239:81/snapshot.cgi?user=admin&pwd=
           
           
   push2:
